@@ -1,6 +1,7 @@
 48
 ================
 
+29/03/24 Recalculate litter count for each edit of the litter/animal
 28/03/24 Remove implant date as hard requirement for AKC/BuddyID
 27/03/24 Wordkeys to add animal diary notes to templates #1453
 25/03/24 Add en_PT locale
